# axplat-loongarch64-2k1000la

./: Cargo.toml  axconfig.toml
src/: boot.rs  console.rs  irq.rs  mem.rs  mp.rs
